packages/babylon/test/fixtures/cssx/errors/expecting-colon/actual.js
cssx(
  section { m }
  @media screen and (max-width: 1000px) {
    p { font-size: 0.8em; }
    p > a { text-decoration: underline; color: #000; }
  }
);